# Stack

./: CMakeLists.txt
gtest/: CMakeLists.txt
stackLib/: Formula.h  Stack.h
test/: CMakeLists.txt  tformula.cpp  tstack.cpp
